--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <title>LOCKWIN IGCPLAY</title>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
-    /* Background seluruh halaman */
     body {
       margin: 0;
       padding: 0;
-      background-image: url('naganaga.jpg'); /* Ganti dengan nama file kamu */
+      background-image: url('naganaga.jpg'); /* Ganti sesuai filemu */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -20,9 +19,8 @@
       font-family: Arial, sans-serif;
     }
 
-    /* Kotak Form */
     .form-container {
-      background: rgba(0, 0, 0, 0.8); /* Hitam transparan */
+      background: rgba(0, 0, 0, 0.8);
       padding: 30px;
       border-radius: 10px;
       text-align: center;
@@ -40,13 +38,18 @@
       font-size: 18px;
     }
 
-    input[type="text"], select {
+    /* Perbaikan: input dan select dijamin sejajar */
+    input[type="text"],
+    select {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
       border-radius: 5px;
-      border: none;
+      border: 1px solid transparent; /* Pastikan border sama */
       font-size: 16px;
+      box-sizing: border-box; /* Pastikan padding tidak bikin lebar berubah */
+      display: block;
+      outline: none;
     }
 
     button {
@@ -62,13 +65,11 @@
 
     .lock-btn {
       background: #00FF00;
-      border: none;
       color: black;
       padding: 15px 40px;
       font-size: 20px;
       font-weight: bold;
       border-radius: 8px;
-      cursor: pointer;
       transition: transform 0.2s;
     }
     .lock-btn:hover {
@@ -76,7 +77,7 @@
     }
 
     .deposit-btn {
-      background-color: #007bff; /* Biru */
+      background-color: #007bff;
     }
 
     .whatsapp-link {
@@ -89,16 +90,14 @@
       border-radius: 5px;
       font-weight: bold;
       animation: shake 1s infinite;
-
     }
 
     @keyframes shake {
-            0% { transform: translateX(0); }
+      0% { transform: translateX(0); }
       25% { transform: translateX(-5px); }
       50% { transform: translateX(5px); }
       75% { transform: translateX(-5px); }
       100% { transform: translateX(0); }
-
     }
 
     .logo {
@@ -123,47 +122,43 @@
 
     <button class="lock-btn">LOCK</button>
     <script>
-          const lockButton = document.querySelector('.lock-btn');
+      const lockButton = document.querySelector('.lock-btn');
+      lockButton.addEventListener('click', function () {
+        const userId = document.getElementById('userId').value.trim();
+        const selectedGame = document.querySelector('select').value;
 
-  lockButton.addEventListener('click', function () {
-    const userId = document.getElementById('userId').value.trim();
-    const selectedGame = document.querySelector('select').value;
-
-    if (userId === '') {
-      Swal.fire({
-        icon: 'error',
-        title: 'ID Tidak Ada!',
-        text: 'Harap masukkan User ID terlebih dahulu.',
-        confirmButtonText: 'OK'
-      });
-    } else if (selectedGame === 'Pilih Game') {
-      Swal.fire({
-        icon: 'error',
-        title: 'Game Belum Dipilih!',
-        text: 'Silakan pilih game terlebih dahulu.',
-        confirmButtonText: 'OK'
-      });
-    } else {
-      Swal.fire({
-        icon: 'success',
-        title: 'Lock ID Berhasil!',
-        text: 'Silahkan lakukan deposit sekarang.',
-        confirmButtonText: 'OK'
-      }).then((result) => {
-        if (result.isConfirmed) {
-          window.location.href = 'https://igcplay.pro/';
+        if (userId === '') {
+          Swal.fire({
+            icon: 'error',
+            title: 'ID Tidak Ada!',
+            text: 'Harap masukkan User ID terlebih dahulu.',
+            confirmButtonText: 'OK'
+          });
+        } else if (selectedGame === 'Pilih Game') {
+          Swal.fire({
+            icon: 'error',
+            title: 'Game Belum Dipilih!',
+            text: 'Silakan pilih game terlebih dahulu.',
+            confirmButtonText: 'OK'
+          });
+        } else {
+          Swal.fire({
+            icon: 'success',
+            title: 'Lock ID Berhasil!',
+            text: 'Silahkan lakukan deposit sekarang.',
+            confirmButtonText: 'OK'
+          }).then((result) => {
+            if (result.isConfirmed) {
+              window.location.href = 'https://igcplay.pro/';
+            }
+          });
         }
       });
-    }
-  });
-
     </script>
-
 
     <button class="deposit-btn">Deposit 25.000/50.000</button>
     <br>
     <a class="whatsapp-link" href="https://wa.me/6283876803565" target="_blank">Hubungi via WhatsApp</a>
-    
   </div>
 
 </body>
