--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <option>PG SOFT</option>
     </select>
 
-    <button class="lock-btn">LOCK</button>
+    <button class="lock-btn">BOOSTER ID</button>
     <script>
       const lockButton = document.querySelector('.lock-btn');
       lockButton.addEventListener('click', function () {
